fixed scrollbars and padding of info box

--- a/projekt/css/friaul.css
+++ b/projekt/css/friaul.css
@@ -87,7 +87,9 @@ background: #fff;
 }
 
 #mapinfo{
-width: 40%;
+width: 38%;
+padding-left: 1%;
+padding-right: 1%;
 height: 100%;
 float: right;
 overflow-y: auto;
